--- a/sem-1.html
+++ b/sem-1.html
@@ -92,7 +92,7 @@
       <div class="hero-container container">
         <div class="hero_detail-box">
           <h1 style="font-weight:bolder ;font-family:'Times New Roman', Times, serif">
-            II SEM
+            I SEM
             <h2 style="font-weight:bolder ;font-family: Verdana, Geneva, Tahoma, sans-serif;">CSBS BRANCH</h2>
             <h3 style="font-family:Verdana, Geneva, Tahoma, sans-serif;font-weight:bold">B.TECH
               CSE(TCS)</h3>
@@ -109,7 +109,7 @@
         </div>
         <div class="hero_img-container">
           <div>
-            <img src="images/sem2.jpg" alt="" class="img-fluid" style="border-radius: 200px;margin-top: 20px;border: 5px dashed #6EBCA8;height: 500px;">
+            <img src="images/sem1.jpg" alt="" class="img-fluid" style="border-radius: 200px;margin-top: 20px;border: 5px dashed #6EBCA8;height: 500px;">
           </div>
         </div>
       </div>
@@ -136,8 +136,8 @@
             <div class="box" style="border-radius:60px">
               <a href="images/Dsa.pdf" target="_blank" download>
               <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="images/Dsa.pdf" target="_blank" download>Data structure And Algorithm<span class="link"></span></a></h4>
-              <p class="description" style="text-align:center">Explore subjects notes of Data structure And Algorithm</p>
+              <h4 class="title"><a href="images/Dsa.pdf" target="_blank" download>Physics For Comp. Science<span class="link"></span></a></h4>
+              <p class="description" style="text-align:center">Explore subjects notes of Physics For Comp. Science</p>
               </a>
             </div>
           </div>
@@ -145,8 +145,8 @@
             <div class="box" style="border-radius:60px">
               <a href="images/pee.pdf" target="_blank" download>
               <div class="icon" style="background: #fff0da;"><i class="ion-ios-bookmarks-outline" style="color: #e98e06;"></i></div>
-              <h4 class="title"><a href="images/pee.pdf" target="_blank" download>Principle Of Electronics Engg.<span class="link"></span></a></h4>
-              <p class="description" style="text-align:center">Explore subjects notes of rinciple Of Electronics Engg.</p>
+              <h4 class="title"><a href="images/pee.pdf" target="_blank" download>Principle Of Electrical Engg.<span class="link"></span></a></h4>
+              <p class="description" style="text-align:center">Explore subjects notes of Principle Of Electrical Engg.</p>
               </a>
             </div>
           </div>
@@ -154,8 +154,8 @@
             <div class="box" style="border-radius:60px">
               <a href="" target="_blank" download>
               <div class="icon" style="background: #c1f8fa;"><i class="ion-ios-speedometer-outline" style="color:#15c4df;"></i></div>
-              <h4 class="title"><a href="" target="_blank" download>Statstical Method<span class="link"></span></a></h4>
-              <p class="description" style="text-align:center">Explore subjects notes of Statstical Method</p>
+              <h4 class="title"><a href="" target="_blank" download>Statstics And Probability<span class="link"></span></a></h4>
+              <p class="description" style="text-align:center">Explore subjects notes of Statstics And Probability</p>
               </a>
             </div>
           </div>
@@ -163,8 +163,8 @@
             <div class="box" style="border-radius:60px">
               <a href="images/linalg.pdf" target="_blank" download>
               <div class="icon" style="background: #eafde7;"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="images/linalg.pdf" target="_blank" download>Linear Algebra<span class="link"></span></a></h4>
-              <p class="description" style="text-align:center">Click to Explore subjects notes of Linear Algebra</p>
+              <h4 class="title"><a href="images/linalg.pdf" target="_blank" download>Discrete Mathematics<span class="link"></span></a></h4>
+              <p class="description" style="text-align:center">Click to Explore subjects notes of Discrete Mathematics</p>
               </a>
             </div>
           </div>
@@ -172,8 +172,8 @@
             <div class="box" style="border-radius:60px">
               <a href="" target="_blank" download>
               <div class="icon" style="background: #fcdcfa;"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="" target="_blank" download>Fundamentals Of Economics<span class="link"></span></a></h4>
-              <p class="description" style="text-align:center">Explore subjects notes of Fundamentals Of Economics</p>
+              <h4 class="title"><a href="" target="_blank" download>Fundamentals Of Computer Science<span class="link"></span></a></h4>
+              <p class="description" style="text-align:center">Explore subjects notes of Fundamentals Of Computer Science</p>
               </a>
             </div>
           </div>
