--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <li class="nav-item " style="margin:3px;font-weight:bold ;font-family:Arial, Helvetica, sans-serif;">
                   <a class="nav-link" href=""> Semester </a>
                   <ul class="sub-menu" style="list-style:none ;">
-                    <li style="margin-top: 10px">Semester 1</li>
+                    <li style="margin-top: 10px"><a href="sem-1.html" style="color: white;">Semester 1</a></li>
                     <li><a href="sem-2.html" style="color: white;">Semester 2</a></li>
-                    <li>Semester 3</li>
+                    <li><a href="sem-3.html" style="color:white ;">Semester 3</a></li>
                     <li>Semester 4</li>
                     <li>Semester 5</li>
                   </ul>
@@ -133,9 +133,9 @@
 
           <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
-              <a href="">
+              <a href="sem-1.html">
               <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">SEMESTER 1<span class="link"></span></a></h4>
+              <h4 class="title"><a href="sem-1.html">SEMESTER 1<span class="link"></span></a></h4>
               <p class="description">Explore all subjects notes of semester 1 inside</p>
               </a>
             </div>
