--- a/sem-3.html
+++ b/sem-3.html
@@ -67,7 +67,7 @@
                 <li class="nav-item " style="margin:3px;font-weight:bold ;font-family:Arial, Helvetica, sans-serif;">
                   <a class="nav-link" href=""> Semester </a>
                   <ul class="sub-menu" style="list-style:none ;">
-                    <li style="margin-top: 10px">Semester 1</li>
+                    <li style="margin-top: 10px"><a href="sem-1.html" style="color: white;">Semester 1</a></li>
                     <li><a href="sem-2.html" style="color: white;">Semester 2</a></li>
                     <li><a href="sem-3.html" style="color: white;">Semester 3</a></li>
                     <li>Semester 4</li>
